# test-ltrapi

./: CMakeLists.txt  CrateEU2.cpp  CrateEU2.h  CrateEu2.cpp  CrateEu2.h  CrateReader.cpp  CrateReader.h  IRecord.cpp  IRecord.h  StdoutChannelRecorder.cpp  StdoutChannelRecorder.h  StdoutRecorder.cpp  StdoutRecorder.h  TAGS  defines.h  functions.cpp  functions.h  main.cpp
